# axum-ddd-uow

./: Cargo.toml  README.md  migrate.sql
app/: Cargo.toml
app/src/: main.rs  router.rs  state.rs
app/src/handlers/: content.rs  tag.rs
common/: Cargo.toml
common/src/: setup.rs  types.rs
domain/: Cargo.toml
domain/src/: lib.rs  model.rs  repository_provider.rs  unit_of_work.rs
domain/src/interface/: content.rs  content_tag.rs  tag.rs
domain/src/model/: content.rs  content_tag.rs  tag.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  repositories.rs
infrastructure/src/impliment/: content.rs  content_tag.rs  tag.rs
infrastructure/tests/: infrastructure_test.rs
usecase/: Cargo.toml
usecase/src/: logic.rs
usecase/src/logic/: content.rs  tag.rs
usecase/src/model/: content.rs
usecase/tests/: content_usecase.rs  tag_usecase.rs
